--- a/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
+++ b/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
@@ -48,7 +48,7 @@
     "          - command: Write-Output ((<<parameter:p1>> + 100))\n",
     "            stdout: <<parameter:p2>>\n",
     "tasks:\n",
-    "  - schemas: [test_t1_conditional_OS_in_place]\n",
+    "  - schema: test_t1_conditional_OS_in_place\n",
     "    inputs:\n",
     "      p1: 101\n",
     "\"\"\"\n",
