--- a/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
+++ b/.github/workflows/test_direct_sub_jupyter_notebook.ipynb
@@ -20,33 +20,34 @@
     "\n",
     "wk_yaml = \"\"\"\n",
     "name: workflow_1\n",
-    "task_schemas:\n",
-    "  - objective: test_t1_conditional_OS_in_place\n",
-    "    inputs:\n",
-    "      - parameter: p1\n",
-    "    outputs:\n",
-    "      - parameter: p2\n",
-    "    actions:\n",
-    "      - rules:\n",
-    "          - path: resources.os_name\n",
-    "            condition: { value.equal_to: posix }\n",
-    "        environments:\n",
-    "          - scope:\n",
-    "              type: any\n",
-    "            environment: null_env\n",
-    "        commands:\n",
-    "          - command: echo \"$((<<parameter:p1>> + 100))\"\n",
-    "            stdout: <<parameter:p2>>\n",
-    "      - rules:\n",
-    "          - path: resources.os_name\n",
-    "            condition: { value.equal_to: nt }\n",
-    "        environments:\n",
-    "          - scope:\n",
-    "              type: any\n",
-    "            environment: null_env\n",
-    "        commands:\n",
-    "          - command: Write-Output ((<<parameter:p1>> + 100))\n",
-    "            stdout: <<parameter:p2>>\n",
+    "template_components:\n",
+    "  task_schemas:\n",
+    "    - objective: test_t1_conditional_OS_in_place\n",
+    "      inputs:\n",
+    "        - parameter: p1\n",
+    "      outputs:\n",
+    "        - parameter: p2\n",
+    "      actions:\n",
+    "        - rules:\n",
+    "            - path: resources.os_name\n",
+    "              condition: { value.equal_to: posix }\n",
+    "          environments:\n",
+    "            - scope:\n",
+    "                type: any\n",
+    "              environment: null_env\n",
+    "          commands:\n",
+    "            - command: echo \"$((<<parameter:p1>> + 100))\"\n",
+    "              stdout: <<parameter:p2>>\n",
+    "        - rules:\n",
+    "            - path: resources.os_name\n",
+    "              condition: { value.equal_to: nt }\n",
+    "          environments:\n",
+    "            - scope:\n",
+    "                type: any\n",
+    "              environment: null_env\n",
+    "          commands:\n",
+    "            - command: Write-Output ((<<parameter:p1>> + 100))\n",
+    "              stdout: <<parameter:p2>>\n",
     "tasks:\n",
     "  - schema: test_t1_conditional_OS_in_place\n",
     "    inputs:\n",
